add app code and job code

--- a/app/src/main/resources/application.properties
+++ b/app/src/main/resources/application.properties
@@ -2,7 +2,9 @@ quarkus.application.name=hierarchy-app
 
 quarkus.log.level=${app.log.level}
 
-app.json={}
+quarkus.devservices.enabled=false
+
+app.json.path=${env.json.path}
 
 #cors
 quarkus.http.cors=true
