--- a/job/src/main/resources/application.properties
+++ b/job/src/main/resources/application.properties
@@ -2,4 +2,17 @@ quarkus.application.name=hierarchy-job
 
 quarkus.log.level=${app.log.level}
 
-app.json={}
+quarkus.devservices.enabled=false
+
+app.module.name=${env.module.name}
+app.json.path=${env.json.path}
+
+# datasource configuration
+quarkus.datasource.db-kind=postgresql
+quarkus.datasource.username=${env.datasource.username}
+quarkus.datasource.password=${env.datasource.password}
+quarkus.datasource.jdbc.url=${env.datasource.jdbc-url}
+quarkus.datasource.jdbc.max-size=2
+
+quarkus.hibernate-orm.physical-naming-strategy=io.samancore.job.config.DynamicTableNamingStrategy
+quarkus.hibernate-orm.database.generation=update
