update kubernetes manifest

--- a/app/src/main/resources/application.properties
+++ b/app/src/main/resources/application.properties
@@ -4,7 +4,7 @@ quarkus.log.level=${app.log.level}
 
 quarkus.devservices.enabled=false
 
-app.json.path=${env.json.path}
+app.json.path=${env.json.path.native}
 
 #cors
 quarkus.http.cors=true
