--- a/job/src/main/resources/application.properties
+++ b/job/src/main/resources/application.properties
@@ -4,8 +4,8 @@ quarkus.log.level=${app.log.level}
 
 quarkus.devservices.enabled=false
 
+app.json.path=${env.json.path.jvm}
 app.module.name=${env.module.name}
-app.json.path=${env.json.path}
 
 # datasource configuration
 quarkus.datasource.db-kind=postgresql
