--- a/.dockerignore
+++ b/.dockerignore
@@ -1,5 +1,9 @@
 *
-!target/*-runner
-!target/*-runner.jar
-!target/lib/*
-!target/quarkus-app/*
+!job/target/*-runner
+!job/target/*-runner.jar
+!job/target/lib/*
+!job/target/quarkus-app/*
+!app/target/*-runner
+!app/target/*-runner.jar
+!app/target/lib/*
+!app/target/quarkus-app/*
